blog(hello-world): change test image

--- a/src/blog/posts/hello-world.mdx
+++ b/src/blog/posts/hello-world.mdx
@@ -22,9 +22,6 @@ Writing this post to test how I set things up, because anything I make tends to 
 print!("this fancy code block thingy with language formatting,");
 ```
 
-<CaptionedImage
-  src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Test.svg/620px-Test.svg.png"
-  alt="and images"
-/>
+<CaptionedImage src="https://media1.tenor.com/m/jvM7s2tiUWsAAAAd/rat-spin.gif" alt="and images" />
 
 And I guess that's it, bye!
